# AdamsQuotes

./: .gitignore  AGENTS.md  Header.html  Makefile  Plan.md  README.md  _config.yml  addTagsToRawQuotes.py  index.html  index.js  main.py  processNewQuotes.py  processQuotes.py  processTaggedQuotesWithLLM.py  pyproject.toml  quotes.html  sampleQuotes.md  sampleQuotesProcessed.copy.md  sampleQuotesProcessed.md  sampleQuotesSemiProcessed.md  sampleQuotesUnprocessed.md  style.css
adamsquotes/: __init__.py  models.py  text_utils.py  types.py
docs/: RefactorPlanJuly2026.md
markdown_quotes/: Accelerando.md  All Systems Red: The Murderbot Diaries.md  Atomic Habits: The life-changing million-copy #1 bestseller.md  Australian Magpie: Biology and Behaviour of an Unusual Songbird.md  Cribsheet: A Data-Driven Guide to Better, More Relaxed Parenting, from Birth to Preschool (The ParentData Series).md  How They Get You: Sneaky Everyday Economics and Smart Ways to Hold on to Your Money.md  In Defence of Food: The Myth of Nutrition and the Pleasures of Eating.md  Invisible Country: Southwest Australia: Understanding a Landscape.md  Kitchen Confidential: 25th Anniversary Edition.md  Manna: Two Visions of Humanity's Future.md  Night Parrot: Australia's Most Elusive Bird.md  QuotesProcessed.md  Seveneves: Astounding apocalyptic fiction from the New York Times Bestseller.md  Snow Crash.md  The Big Twitch: One man, one continent, a race against time - a true story about birdwatching.md  The Books of Earthsea: The Complete Illustrated Edition.md  The Left Hand of Darkness: A groundbreaking feminist literary masterpiece (S.F. MASTERWORKS Book 172).md  The Lord of the Rings: The Classic Bestselling Fantasy Novel.md  The Malay Archipelago (Pocket Penguins).md  The Ministry for the Future.md  The New Nature.md  new_quotes_llm_processed.md  (+8 more)
(+47 files in other folders)
