[project]
name = "adamsquotes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.3",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
[dependency-groups]
dev = [
    "pytest>=8.0",
]
