[project]
name = "adamsquotes"
version = "0.1.0"
description = "A pipeline for processing and rendering a personal quote collection to HTML"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
adamsquotes-tag = "adamsquotes.cli.tagger:main"
adamsquotes-convert = "adamsquotes.cli.converter:main"
adamsquotes-clean = "adamsquotes.cli.llm_cleaner:main"
adamsquotes-render = "adamsquotes.cli.renderer:main"
adamsquotes-kindle = "adamsquotes.cli.kindle:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
